gcc/testsuite/rust/rustc/ui/expr/malformed_closure/missing_block_in_let_binding.rs
fn main() {
    let x = |x|
        let y = x; // { dg-error "" "" { target *-*-* } }
        let _ = () + ();
        y
}

